--- a/angular.json
+++ b/angular.json
@@ -29,11 +29,7 @@
             "styles": [
               "src/styles.css"
             ],
-            "server": "src/main.server.ts",
-            "outputMode": "server",
-            "ssr": {
-              "entry": "src/server.ts"
-            }
+            "outputPath": "dist/oseven-management-services"
           },
           "configurations": {
             "production": {
